--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,52 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.container {
+  margin: 10px;
+}
+
+.image-block {
+  box-sizing: border-box;
+  height: 450px;
+  width: 400px;
+  margin: 80px auto;
+  padding: 15px 15px 60px 15px;
+  background-color: white;
+  border: 1px solid darkgrey;
+  box-shadow: 5px 10px 10px darkgrey;
+  text-align: center;
+}
+
+img {
+  max-height: 365px;
+  max-width: 370px;
+}
+
+.button-block {
+  margin: 40px auto;
+  width: 200px;
+  display: flex;
+  justify-content: center;
+}
+
+button {
+ height: 40px;
+ width: 40px;
+ border: 2px solid darkgray;
+ border-radius: 4px;
+}
+
+button + button {
+  margin-left: 20px;
+}
+
+.Columns {
+  display: flex;
+  margin: 40px auto;
+}
+
+.Columns {
+  display: flex;
+  justify-content: space-around;
+}
